--- a/sections/dev__position.liquid
+++ b/sections/dev__position.liquid
@@ -116,11 +116,26 @@
       "id": "position",
       "label": "Position",
       "options": [
-        { "value": "static", "label": "Static" },
-        { "value": "relative", "label": "Relative" },
-        { "value": "absolute", "label": "Absolute" },
-        { "value": "fixed", "label": "Fixed" },
-        { "value": "sticky", "label": "Sticky" }
+        {
+          "value": "static",
+          "label": "Static"
+        },
+        {
+          "value": "relative",
+          "label": "Relative"
+        },
+        {
+          "value": "absolute",
+          "label": "Absolute"
+        },
+        {
+          "value": "fixed",
+          "label": "Fixed"
+        },
+        {
+          "value": "sticky",
+          "label": "Sticky"
+        }
       ],
       "default": "static"
     },
@@ -135,15 +150,42 @@
       "id": "top_offset_unit",
       "label": "Top Offset Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -158,15 +200,42 @@
       "id": "right_offset_unit",
       "label": "Right Offset Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -181,15 +250,42 @@
       "id": "bottom_offset_unit",
       "label": "Bottom Offset Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -204,15 +300,42 @@
       "id": "left_offset_unit",
       "label": "Left Offset Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -231,15 +354,42 @@
       "id": "margin_top_unit",
       "label": "Margin Top Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -254,15 +404,42 @@
       "id": "margin_right_unit",
       "label": "Margin Right Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -277,15 +454,42 @@
       "id": "margin_bottom_unit",
       "label": "Margin Bottom Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -300,15 +504,42 @@
       "id": "margin_left_unit",
       "label": "Margin Left Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -323,14 +554,38 @@
       "id": "padding_top_unit",
       "label": "Padding Top Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
@@ -345,14 +600,38 @@
       "id": "padding_right_unit",
       "label": "Padding Right Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
@@ -367,14 +646,38 @@
       "id": "padding_bottom_unit",
       "label": "Padding Bottom Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
@@ -389,14 +692,38 @@
       "id": "padding_left_unit",
       "label": "Padding Left Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     }
