--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -23,12 +23,27 @@
     {% endif %}
 
     {% render 'meta-tags' %}
-
+    {% if settings.tailwind_enabled %}
+      {% if request.design_mode %}
+        <script src="https://cdn.tailwindcss.com" defer="defer"></script>
+        <script>
+          document.addEventListener('DOMContentLoaded', function() {
+            {{ settings.tailwind_config }}
+          });
+        </script>   
+        <style type='text/tailwindcss'>
+          {{ settings.tailwind_css }}
+        </style>             
+      {% else %}
+      {{ 'output.css' | asset_url | stylesheet_tag }}
+      {% endif %}
+    {% else %}      
+      {{ 'base.css' | asset_url | stylesheet_tag }}
+    {% endif %}
+        
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
 
     {{ content_for_header }}
-
-    {{ 'base.css' | asset_url | stylesheet_tag }}
 
     <script>
       document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
@@ -36,37 +51,19 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
     {% style %}
-
-        :root{
-
-          --media-padding: {{ settings.media_padding }}px;
-          --media-border-opacity: {{ settings.media_border_opacity | divided_by: 100.0 }};
-          --media-border-width: {{ settings.media_border_thickness }}px;
-          --media-radius: {{ settings.media_radius }}px;
-          --media-shadow-opacity: {{ settings.media_shadow_opacity | divided_by: 100.0 }};
-          --media-shadow-horizontal-offset: {{ settings.media_shadow_horizontal_offset }}px;
-          --media-shadow-vertical-offset: {{ settings.media_shadow_vertical_offset }}px;
-          --media-shadow-blur-radius: {{ settings.media_shadow_blur }}px;
-          --media-shadow-visible: {% if settings.media_shadow_opacity > 0 %}1{% else %}0{% endif %};
-
-          --text-boxes-border-opacity: {{ settings.text_boxes_border_opacity | divided_by: 100.0 }};
-          --text-boxes-border-width: {{ settings.text_boxes_border_thickness }}px;
-          --text-boxes-radius: {{ settings.text_boxes_radius }}px;
-          --text-boxes-shadow-opacity: {{ settings.text_boxes_shadow_opacity | divided_by: 100.0 }};
-          --text-boxes-shadow-visible: {% if settings.text_boxes_shadow_opacity > 0 %}1{% else %}0{% endif %};
-          --text-boxes-shadow-horizontal-offset: {{ settings.text_boxes_shadow_horizontal_offset }}px;
-          --text-boxes-shadow-vertical-offset: {{ settings.text_boxes_shadow_vertical_offset }}px;
-          --text-boxes-shadow-blur-radius: {{ settings.text_boxes_shadow_blur }}px;
-
-          --sections-spacing: {{ settings.sections_spacing }}px;
-          --sections-safe-spacing: {% if settings.sections_spacing < 15 %}15{% else %}{{settings.sections_spacing}}{% endif %}px;
-          --sections-radius: {{ settings.sections_radius }}px;
-          --sections-border-width: {{ settings.sections_border_width }}px;
-          --sections-border-opacity: {{ settings.sections_border_opacity | divided_by: 100.0 }};
-          --sections-border-color: {{ settings.sections_border_color.red }}, {{ settings.sections_border_color.green }}, {{ settings.sections_border_color.blue }};
-        }
-
+      .visually-hidden {
+        position: absolute !important;
+        overflow: hidden;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        padding: 0;
+        border: 0;
+        clip: rect(0 0 0 0);
+        word-wrap: normal !important;
+      }
     {% endstyle %}
   </head>
 
