--- a/assets/multi-column.css
+++ b/assets/multi-column.css
@@ -12,26 +12,101 @@
 .multi-column__container {
   margin-top: 20px;
   display: flex;
-  justify-content: space-between;
-  gap: 20px; /* Adjust the gap between columns as needed */
+  gap: 20px;
 
   &.single-column {
     flex-direction: column;
   }
 
-  &.two-columns {
-    flex-wrap: wrap;
-  }
-
   &.three-columns {
     flex-wrap: wrap;
-  }
-
-  & h2 {
-    font-size: 20px;
   }
 }
 
 .multi-column__item {
-  /* Add styling for each column item */
+
+    width: 250px;
+    padding: 15px 15px;
+    background-color: #ebe7e7;
+    border-radius: 20px;
+
+    & .multi-column__item-img {
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
+    }
+
+    & .multi-column__item-img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover; 
+        border-radius: 10px;
+        
+    }
+
+    & h3 {
+        font-size: 20px;
+        margin-top: 10px;
+        font-weight: 500;
+        word-wrap: break-word; 
+        overflow-wrap: break-word;
+    }
+
+    & p{
+        font-size: 16px;
+        font-weight: 300;
+        word-wrap: break-word; 
+        overflow-wrap: break-word;
+    }
+
+    & a{
+        font-weight: 400;
+        color: rgb(3, 3, 59);
+    }
+
+    & a:hover{
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .multi-column {
+        width: 80%;
+        margin: 0 auto;
+
+        & h2 {
+            font-size: 24px;
+        }
+    }
+
+    .multi-column__container {
+        margin-top: 20px;
+
+        &.single-column {
+            flex-direction: column;
+        }
+    }
+
+    .multi-column__item {
+
+        width: 100%;
+        padding: 10px 10px;
+        border-radius: 15px;
+
+        & .multi-column__item-img {
+            width: 100%;
+            height: 150px;
+        }
+
+        & h3 {
+            font-size: 18px;
+        }
+
+        & p{
+            font-size: 14x;
+        }
+    }
+
 }
